--- a/angular.json
+++ b/angular.json
@@ -20,6 +20,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "node_modules/@coreui/icons/css/coreui-icons.css",
               "node_modules/flag-icon-css/css/flag-icon.css",
               "node_modules/font-awesome/css/font-awesome.css",
@@ -27,12 +28,9 @@
               "src/scss/style.scss",
               "node_modules/pnotify/dist/PNotifyBrightTheme.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css"
-    
             ],
             "stylePreprocessorOptions": {
-              "includePaths": [
-                
-              ]
+              "includePaths": []
             },
             "scripts": [
               "node_modules/chart.js/dist/Chart.min.js"
@@ -92,6 +90,7 @@
               "node_modules/chart.js/dist/Chart.min.js"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "node_modules/flag-icon-css/css/flag-icon.css",
               "node_modules/font-awesome/css/font-awesome.css",
               "node_modules/simple-line-icons/css/simple-line-icons.css",
