--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^9.0.0-rc.7",
+    "@angular/cdk": "~8.2.3",
     "@angular/common": "^9.0.0-rc.7",
     "@angular/compiler": "^9.0.0-rc.7",
     "@angular/core": "^9.0.0-rc.7",
     "@angular/forms": "^9.0.0-rc.7",
+    "@angular/material": "^8.2.3",
     "@angular/platform-browser": "^9.0.0-rc.7",
     "@angular/platform-browser-dynamic": "^9.0.0-rc.7",
     "@angular/router": "^9.0.0-rc.7",
@@ -42,6 +44,7 @@
     "@coreui/coreui": "^2.1.16",
     "@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.3.1",
     "@coreui/icons": "0.3.0",
+    "@ng-bootstrap/ng-bootstrap": "^5.2.1",
     "@tinymce/tinymce-angular": "^3.3.1",
     "bootstrap": "^4.4.1",
     "chart.js": "^2.9.2",
@@ -50,6 +53,8 @@
     "core-js": "^2.6.11",
     "flag-icon-css": "^3.4.5",
     "font-awesome": "^4.7.0",
+    "hammerjs": "^2.0.8",
+    "jquery": "^3.4.1",
     "jwt-decode": "^2.2.0",
     "moment": "^2.24.0",
     "mutationobserver-shim": "^0.3.3",
